431_coffee/0_ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: cafe-shop
  labels: 
    stage: DEV
    author: david.kun
