431_coffee/coffee-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-deployment
  namespace: cafe-shop
  labels:
    app: coffee-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-deployment
  template:
    metadata:
      labels:
        app: coffee-deployment
    spec:
      containers:
      - image: nginxdemos/hello
        name: coffee-deployment
        ports:
        - containerPort: 80
