431_coffee/tea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-deployment
  namespace: cafe-shop
  labels:
    app: tea-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea-deployment
  template:
    metadata:
      labels:
        app: tea-deployment
    spec:
      containers:
      - image: nginxdemos/hello
        name: tea-deployment
        ports:
        - containerPort: 80
