431_coffee/coffee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: cafe-shop
  labels:
    app: coffee-deployment
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee-deployment
