431_coffee/tea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: cafe-shop
  labels:
    app: tea-deployment
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea-deployment
